<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EFEFF4"
    tools:context=".ChattingScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SettingText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:textSize="17sp"
        android:text="@string/settings_SettingFragment"
        android:layout_alignParentTop="true"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileCardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SettingText"

        android:layout_marginTop="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="5dp"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:padding="3dp"
                android:background="@drawable/chat_dp"
                android:src="@drawable/image1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/username"
                    android:id="@+id/ChatsUserName"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/about"
                    android:layout_marginBottom="4dp"
                    />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height= "20dp"
                    android:id="@+id/arrow"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"

                    android:src="@drawable/baseline_arrow_forward_ios_24"/>

            </RelativeLayout>


        </LinearLayout>



    </androidx.cardview.widget.CardView>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/Chats_Settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileCardView"



        android:layout_alignBottom="@+id/profileCardView"
        
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8.5dp"
                android:src="@drawable/whatsapp_insetting"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chats_setting"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>



        </LinearLayout>




        



    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/chatsLine"
        android:background="#4A3C3C43"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Chats_Settings"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Accounts_Settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatsLine"




        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8.5dp"
                android:src="@drawable/accounts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/accounts"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/accoutsLine"
        android:background="#4A3C3C43"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Accounts_Settings"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Notifications"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accoutsLine"




        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8.5dp"
                android:src="@drawable/notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/notificationLine"
        android:background="#4A3C3C43"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Notifications"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DataAndStorage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationLine"




        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8.5dp"
                android:src="@drawable/data_storage"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/data_and_storage_usage"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/StarredMsg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataAndStorage"




        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8.5dp"
                android:src="@drawable/starred_msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/starred_msg"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/starredLine"
        android:background="#4A3C3C43"
        android:layout_marginStart="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StarredMsg"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WhatsappDestop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starredLine"




        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="8.5dp"
                android:src="@drawable/whatsapp_destop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/whatsappdesktop"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:id="@+id/LogOut"
        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
